--- a/prerender-crawler-js/package.json
+++ b/prerender-crawler-js/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "exepress-up": "PORT=8080 node ./bin/www",
     "start": "PORT=8080 nodemon ./bin/www",
     "debug": "DEBUG=prerender-crawler-js:* npm start",
     "server-up": "node prerender-server/server.js "
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "crawler": "^1.2.1",
     "debug": "~2.6.9",
     "eslint": "^6.8.0",
     "express": "~4.16.1",
